Tue Feb 11 19:04:19 EST 2003    Ryan McCabe <ryan@numb.org>

    * Added a patch from Mieczyslaw Nalewaj  <nami@polbox.com> to add
      support for FreeBSD 5.

    * Added a patch from Elliott Mitchell <ehem@m5p.com> to prevent
      memory leaks in parts of the configuration parser.

Thu Jan  9 13:49:15 EST 2003    Ryan McCabe <ryan@numb.org>

    * Added DNAT patch for Linux from Christian Kellner <gicmo@gmx.net>

    * Added a ptch from Krzysztof Ol?dzki <ole@ans.pl> that fixes
      lookups of IPv6 connections.

Sat Aug 24 09:20:43 EDT 2002    Ryan McCabe <ryan@numb.org>

    * Fixed a compile error for older versions of libc on Linux.
        - Thanks to Motohiko Takemura <takemura@pharmaco.crl.hyo-med.ac.jp>

Thu Aug 22 11:44:20 EDT 2002    Ryan McCabe <ryan@numb.org>

    * Cleaned up the connection forwarding code, made connection
      forwarding actually work on BSD.
        - Thanks to Ewen McNeill <ewen@naos.co.nz>

Wed Aug 20 13:21:34 EDT 2002    Ryan McCabe <ryan@numb.org>

    * Released as version 2.0.4.

Wed Aug  7 23:05:56 EDT 2002    Ryan McCabe <ryan@numb.org>

    * Added support for Solaris 9.
        - Thanks to Douglas Palmer <palmer@nyed.uscourts.gov>

    * Use the netlink socket diagnostics interface to look up
      connection owners on Linux, if available.

Wed Jan 30 15:22:39 EST 2002    Ryan McCabe <ryan@numb.org>

    * Added support for Darwin.

Tue Jan 22 16:07:39 EST 2002    Ryan McCabe <ryan@numb.org>

    * Kill the "Address family not supported by protocol" warning
      when running with --debug.

Wed Jan 16 00:25:02 EST 2002    Ryan McCabe <ryan@numb.org>

    * Really fixed forwarding and proxy support on FreeBSD.

    * Fixes for NAT on OpenBSD >= 3.0.

Tue Jan  1 10:17:30 EST 2002    Ryan McCabe <ryan@numb.org>

    * Added support for NetBSD.

    * Fixed a bug in the OpenBSD connection forwarding code.

Sat Dec 29 16:23:52 EST 2001    Ryan McCabe <ryan@numb.org>

    * Released as version 2.0.3.
