@@ -43,6 +43,8 @@
 #include <oidentd_util.h>
 #include <oidentd_inet_util.h>
 
+extern struct sockaddr_storage proxy;
+
 /*
 ** Return the UID of the connection owner
 */
@@ -62,9 +64,12 @@ int get_user4(	in_port_t lport,
 
 	tir.faddr.ss_family = AF_INET;
 	tir.faddr.ss_len = sizeof(struct sockaddr);
-	fin = (struct sockaddr_in *) &tir.faddr;
-	memcpy(&fin->sin_addr, &SIN4(faddr)->sin_addr, sizeof(struct in_addr));
-	fin->sin_port = fport;
+
+	if (!opt_enabled(PROXY) || !sin_equal(faddr, &proxy)) {
+		fin = (struct sockaddr_in *) &tir.faddr;
+		memcpy(&fin->sin_addr, &SIN4(faddr)->sin_addr, sizeof(struct in_addr));
+		fin->sin_port = fport;
+	}
 
 	tir.laddr.ss_family = AF_INET;
 	tir.laddr.ss_len = sizeof(struct sockaddr);
