@@ -54,6 +54,8 @@
 #include <oidentd_masq.h>
 #include <oidentd_options.h>
 
+extern struct sockaddr_storage proxy;
+
 /*
 ** Return the UID of the connection owner
 */
@@ -74,8 +76,10 @@ int get_user4(	in_port_t lport,
 	tir.faddr.ss_family = AF_INET;
 	tir.faddr.ss_len = sizeof(struct sockaddr);
 	fin = (struct sockaddr_in *) &tir.faddr;
-	memcpy(&fin->sin_addr, &SIN4(faddr)->sin_addr, sizeof(struct in_addr));
 	fin->sin_port = fport;
+
+	if (!opt_enabled(PROXY) || !sin_equal(faddr, &proxy))
+		memcpy(&fin->sin_addr, &SIN4(faddr)->sin_addr, sizeof(struct in_addr));
 
 	tir.laddr.ss_family = AF_INET;
 	tir.laddr.ss_len = sizeof(struct sockaddr);
